<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lovewallper"
    android:gravity="center"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_gravity="center"
            >


            <ImageView
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:src="@drawable/chati_icon512"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="0dp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/hintAnimationSignIN"

                    >

                    <EditText
                        android:id="@+id/edtEmailLogin"
                        android:layout_width="300dp"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/gnt_black"


                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="12"
                    android:maxLines="1"
                    app:passwordToggleEnabled="true"
                    app:counterMaxLength="12"
                    android:theme="@style/hintAnimationSignIN"
                    android:layout_marginTop="10dp"

                    >

                    <EditText
                        android:id="@+id/edtPasswordLogin"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="#E6FFFFFF"
                        android:textColorHint="@color/colorBlackPure" />

                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="116dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textAllCaps="true"
                android:background="@drawable/round_corner"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorVertbyrry"
                android:textSize="18sp" />
            <TextView
                android:layout_marginTop="10dp"



                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account ? sign up !"
                android:textColor="@color/gnt_white"
                android:layout_gravity="center"/>

            <Button

                android:id="@+id/tvGoSignUP"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:textAllCaps="true"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:background="@drawable/round_corner"
                android:backgroundTint="@color/gnt_blue"
                android:gravity="center"
                android:textSize="18sp"

                />

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/colorWhite"
                android:drawableLeft="@drawable/google_logo_a"
                android:padding="8dp"
                android:visibility="invisible"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textStyle="bold"
                android:id="@+id/btnSignInWithGoogle"
                android:backgroundTint="@color/colorVertbyrry"
                android:background="@drawable/round_corner"
                android:drawableStart="@drawable/google_logo_a" />




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >


                <ProgressBar
                    android:id="@+id/pbLogin"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="24dp"
                    android:foregroundGravity="right"
                    android:theme="@style/AppTheme.WhiteAccent"
                    android:visibility="invisible" />


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
